Fixes broken image path and outputContrastColor

--- a/src/components/Colors/Colors.css
+++ b/src/components/Colors/Colors.css
@@ -1,6 +1,6 @@
 .colors {
   align-self: stretch;
-  background-image: url('/img/bgTransparent.svg');
+  background-image: url('../../img/bgTransparent.svg');
   box-sizing: border-box;
   display: flex;
   flex-grow: 1;
